<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/edit_distance"
        android:inputType="number"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="Total de quilômetros"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/edit_price"
        android:inputType="numberDecimal"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="Preço por litro"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/edit_autonomy"
        android:inputType="numberDecimal"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="KMs por litro"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Seu gasto total será de:"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/text_total_kms"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_calculate"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        app:backgroundTint="@color/red"/>

</LinearLayout>